{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 55,
  "lineage": "2d5be9a1-6225-02ad-2449-d1d6112498bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01572eda7c4411960",
            "arn": "arn:aws:ec2:us-west-2:381492010096:instance/i-04a20893e84f95cef",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a20893e84f95cef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wordpress",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f39e0af726c06c00",
            "private_dns": "ip-10-0-0-56.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.56",
            "public_dns": "ec2-34-217-175-154.us-west-2.compute.amazonaws.com",
            "public_ip": "34.217.175.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-004e145effd165aec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3f87ce3973607a0",
            "tags": {
              "Name": "WordPress Instance 2024-04-12"
            },
            "tags_all": {
              "Name": "WordPress Instance 2024-04-12"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03abd844d0be146c6"
            ]
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.private",
            "aws_security_group.rds_mysql",
            "aws_security_group.wordpress_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_db_instance.mysql_data",
            "data.template_file.userdataEC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:internet-gateway/igw-09a67d7f52689c8f5",
            "id": "igw-09a67d7f52689c8f5",
            "owner_id": "381492010096",
            "tags": {
              "Name": "igw 2024-04-12"
            },
            "tags_all": {
              "Name": "igw 2024-04-12"
            },
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:381492010096:loadbalancer/app/wordpress-alb/7cda4f7708a90406",
            "arn_suffix": "app/wordpress-alb/7cda4f7708a90406",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-alb-1144601958.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:381492010096:loadbalancer/app/wordpress-alb/7cda4f7708a90406",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03abd844d0be146c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07d32cf5f2738e32c"
              },
              {
                "subnet_id": "subnet-0c3f87ce3973607a0"
              }
            ],
            "subnets": [
              "subnet-07d32cf5f2738e32c",
              "subnet-0c3f87ce3973607a0"
            ],
            "tags": {
              "Name": "wordpress_alb 2024-04-12"
            },
            "tags_all": {
              "Name": "wordpress_alb 2024-04-12"
            },
            "vpc_id": "vpc-04bb9f1f43e1a30c9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.wordpress_sg",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:381492010096:listener/app/wordpress-alb/7cda4f7708a90406/a1b3e37238a7084e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:381492010096:targetgroup/wordpress-target-group/a109d806c49f8d2f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:381492010096:listener/app/wordpress-alb/7cda4f7708a90406/a1b3e37238a7084e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:381492010096:loadbalancer/app/wordpress-alb/7cda4f7708a90406",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.wordpress_alb",
            "aws_lb_target_group.Wordpress_target_group",
            "aws_security_group.wordpress_sg",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Wordpress_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:381492010096:targetgroup/wordpress-target-group/a109d806c49f8d2f",
            "arn_suffix": "targetgroup/wordpress-target-group/a109d806c49f8d2f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:381492010096:targetgroup/wordpress-target-group/a109d806c49f8d2f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "wordpress-target-group 2024-04-12"
            },
            "tags_all": {
              "Name": "wordpress-target-group 2024-04-12"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "wordpress_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:381492010096:targetgroup/wordpress-target-group/a109d806c49f8d2f-20240629181942817800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:381492010096:targetgroup/wordpress-target-group/a109d806c49f8d2f",
            "target_id": "i-04a20893e84f95cef"
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.private",
            "aws_instance.wordpress_instance",
            "aws_lb_target_group.Wordpress_target_group",
            "aws_security_group.rds_mysql",
            "aws_security_group.wordpress_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_db_instance.mysql_data",
            "data.template_file.userdataEC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:route-table/rtb-08b6c838281bb4396",
            "id": "rtb-08b6c838281bb4396",
            "owner_id": "381492010096",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_Route_Table 2024-04-12_1"
            },
            "tags_all": {
              "Name": "Private_Route_Table 2024-04-12_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:route-table/rtb-05d977d43502d8474",
            "id": "rtb-05d977d43502d8474",
            "owner_id": "381492010096",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_Route_Table 2024-04-12_2"
            },
            "tags_all": {
              "Name": "Private_Route_Table 2024-04-12_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:route-table/rtb-0622edd566f4e8b5f",
            "id": "rtb-0622edd566f4e8b5f",
            "owner_id": "381492010096",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a67d7f52689c8f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_Table 2024-04-12"
            },
            "tags_all": {
              "Name": "Public_Route_Table 2024-04-12"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09652edf0687eda2e",
            "route_table_id": "rtb-08b6c838281bb4396",
            "subnet_id": "subnet-0bb0c6fb6cd2372eb"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce0de8d4d6349463",
            "route_table_id": "rtb-05d977d43502d8474",
            "subnet_id": "subnet-008bca04bfc28307e"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cf235dc6256a8c4",
            "route_table_id": "rtb-0622edd566f4e8b5f",
            "subnet_id": "subnet-0c3f87ce3973607a0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b40390893a2a433",
            "route_table_id": "rtb-0622edd566f4e8b5f",
            "subnet_id": "subnet-07d32cf5f2738e32c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:security-group/sg-0b21396fa8de3122a",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b21396fa8de3122a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_mysql_sg",
            "name_prefix": "",
            "owner_id": "381492010096",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_mysql 2024-04-12"
            },
            "tags_all": {
              "Name": "rds_mysql 2024-04-12"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:security-group/sg-03abd844d0be146c6",
            "description": "Security group for WordPress instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03abd844d0be146c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress_sg",
            "name_prefix": "",
            "owner_id": "381492010096",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress_sg 2024-04-12"
            },
            "tags_all": {
              "Name": "wordpress_sg 2024-04-12"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:subnet/subnet-0bb0c6fb6cd2372eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb0c6fb6cd2372eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492010096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet 2024-04-12_1"
            },
            "tags_all": {
              "Name": "Private_Subnet 2024-04-12_1"
            },
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:subnet/subnet-008bca04bfc28307e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008bca04bfc28307e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492010096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet 2024-04-12_2"
            },
            "tags_all": {
              "Name": "Private_Subnet 2024-04-12_2"
            },
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:subnet/subnet-0c3f87ce3973607a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3f87ce3973607a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492010096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet 2024-04-12_1"
            },
            "tags_all": {
              "Name": "Public_Subnet 2024-04-12_1"
            },
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:subnet/subnet-07d32cf5f2738e32c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d32cf5f2738e32c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492010096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet 2024-04-12_2"
            },
            "tags_all": {
              "Name": "Public_Subnet 2024-04-12_2"
            },
            "vpc_id": "vpc-04bb9f1f43e1a30c9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381492010096:vpc/vpc-04bb9f1f43e1a30c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-03f696ac1392ec863",
            "default_route_table_id": "rtb-0b20b6fcef397ae85",
            "default_security_group_id": "sg-0db012451bace1b3b",
            "dhcp_options_id": "dopt-0ce2a80c4892340cf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04bb9f1f43e1a30c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b20b6fcef397ae85",
            "owner_id": "381492010096",
            "tags": {
              "Name": "vpc 2024-04-12"
            },
            "tags_all": {
              "Name": "vpc 2024-04-12"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}